# xinput-gtk

./: .gitignore  CMakeLists.txt  README.md
include/xinput-gtk/: Utils.hpp  XInputGtk.hpp
include/xinput-gtk/gui/: AboutDialog.hpp  EditWindow.hpp  InfoWindow.hpp  PropWindow.hpp  ReattachWindow.hpp  Window.hpp
include/xinput-gtk/xinput/: XInputDevice.hpp  XInputHelper.hpp
src/: Utils.cpp  main.cpp
src/gui/: AboutDialog.cpp  EditWindow.cpp  InfoWindow.cpp  PropWindow.cpp  ReattachWindow.cpp  Window.cpp
src/xinput/: XInputDevice.cpp  XInputHelper.cpp
